ingressroutes/authentication-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: authentication-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`4.182.90.110.nip.io`) && PathPrefix(`/api/authentication`)
      kind: Rule
      services:
        - name: authentication
          namespace: default
          port: 8003
