ingressroutes/rabbitmq-ingressroute.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: rabbitmq-ingress
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`4.182.90.110.nip.io`) && PathPrefix(`/rabbitmq`)
      kind: Rule
      services:
        - name: rabbitmq
          namespace: default
          port: 15672
